refactor(test): 更新测试类中的JSON映射器和代码简化
- 将ObjectMapper替换为JsonMapper以使用更现代的Jackson映射器
- 使用getFirst()方法替代get(0)来获取列表第一个元素
- 移除不必要的try-catch块，因为JsonMapper.readValue不会抛出检查异常
- 将匿名内部类转换为Lambda表达式以简化代码结构
- 移除不再需要的Jackson核心库导入声明